# obsidian-legion

./: .gitignore  CONTRIBUTORS.md  INSTALL_ME.md  LAUNCH_STRATEGY.md  PRODUCT_ROADMAP.md  README.md  demo.tape  install.sh  pyproject.toml  tui-intro-video.tape  tui-intro.tape
.github/: FUNDING.yml
.github/workflows/: ci.yml
dispatch/: .mcp.json.example  CODEX_HANDOFF_FIX_BRIDGES.md  README.md  ping_test.py  smoke_test.sh
dispatch/.logs/: dispatch_runs.jsonl  route_decisions.jsonl  route_hint.json
dispatch/mcp/: __init__.py  _shared.py  codex_bridge.py  codex_fastmcp.py  gemini_bridge.py  gemini_fastmcp.py  ollama_bridge.py  ollama_fastmcp.py
dispatch/router/: dispatch-matrix.yaml
dispatch/scripts/: classify_prompt.py  common.py  dispatch.py
docs/: FIX_HOOK_COMPACT_DEADLOCK.md  INTEGRATIONS.md  MEMORY_ARCHITECTURE.md  NOTEBOOKLM_REFERENCE.md  PLAN_MULTI_LLM_DISPATCH.md
scripts/: chat_to_raw.py  com.vex.legion.nightly.plist  install_legion_nightly.sh  legion_nightly.py  setup-claude-mcp.sh  setup-gemini-mcp.sh  standardize_frontmatter.py  sync_vault_to_qdrant.py  vexpedia_probe.py  wiki_cron.sh  wiki_generate.py  wiki_watch.py
src/obsidian_legion/: __init__.py  cli.py  config.py  graphify.py  mcp_server.py  models.py  store.py  wiki_compiler.py  wiki_models.py  wiki_store.py
src/obsidian_legion/prompts/: __init__.py  concept.txt  entity.txt  event.txt  source.txt  topic.txt
src/obsidian_legion/vaultgraph/: __init__.py  analytics.py  bakeoff.py  builder.py  embedder.py  exclusion.py  graphdb.py  missions.py  parser.py  providers.py  registry.py  report.py  sanitize.py  wiki_writer.py
tests/: test_cli.py  test_graphify.py  test_standardize_frontmatter.py  test_store.py  test_vexpedia_probe.py  test_vg_analytics.py  test_vg_bakeoff.py  test_vg_builder.py  test_vg_embedder.py  test_vg_exclusion.py  test_vg_graphdb.py  test_vg_mcp.py  test_vg_missions.py  test_vg_parser.py  test_vg_providers.py  test_vg_registry_cli.py  test_vg_report.py  test_vg_sanitize.py  test_vg_wiki_writer.py  test_wiki.py
