[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-legion"
version = "0.1.0"
description = "Vault-native task engine for the VALX Obsidian legion."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "VAL:X / VEX" },
]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
mcp = [
  "mcp>=1.12,<2",
]

[project.scripts]
obsidian-legion = "obsidian_legion.cli:main"
obsidian-legion-mcp = "obsidian_legion.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
