[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-legion"
version = "0.3.1"
description = "Vault-native task engine + LLM Wiki compiler for the VALX Obsidian legion."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "VAL:X / VEX" },
]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
tui = [
  "rich>=13.7",
]
mcp = [
  "mcp>=1.12,<2",
]
wiki = [
  "httpx>=0.27",
]
graph = [
  "graphifyy>=1.0",
]
all = [
  "rich>=13.7",
  "mcp>=1.12,<2",
  "httpx>=0.27",
  "qdrant-client>=1.9",
  "graphifyy>=1.0",
]

[project.urls]
Homepage = "https://github.com/valx-vex/obsidian-legion"
Repository = "https://github.com/valx-vex/obsidian-legion"
Issues = "https://github.com/valx-vex/obsidian-legion/issues"
Changelog = "https://github.com/valx-vex/obsidian-legion/releases"

[project.scripts]
obsidian-legion = "obsidian_legion.cli:main"
obsidian-legion-mcp = "obsidian_legion.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
